Fix for bug 76541, r=danm, sr=brendan, a=asa@mozilla.org.  Suspending and Releasing JS requests during Alert and Confirm dialog creation.